Add prefinery waitlist signup to landing page

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&family=Montserrat&family=PT+Sans+Narrow&display=swap"
     rel="stylesheet"
     />
+
+    <script>prefinery=window.prefinery||function(){(window.prefinery.q=window.prefinery.q||[]).push(arguments)};</script>
+    <script src="https://widget.prefinery.com/widget/v2/xzpklod6.js" defer></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
